--- a/index.html
+++ b/index.html
@@ -1,90 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <script src="https://kit.fontawesome.com/e618ac2755.js" crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <head>
+    <script
+      src="https://kit.fontawesome.com/e618ac2755.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta charset="UTF-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast</title>
-    <link rel="stylesheet" href="src/stylesheet.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container search">
-    <form id="search-form" class="input-group">
-        <input type="search" class="form-control" id="search-input" placeholder="Enter city..." autocomplete="off" autofocus>
-        <input type="submit" class="btn btn-primary" value="Search">
-        <input type="submit" class="btn btn-outline-light" id="current-city" value="Current">
-    </form>
+      <form id="search-form" class="input-group">
+        <input
+          type="search"
+          class="form-control"
+          id="search-input"
+          placeholder="Enter city..."
+          autocomplete="off"
+          autofocus
+        />
+        <input type="submit" class="btn btn-primary" value="Search" />
+        <input
+          type="submit"
+          class="btn btn-outline-light"
+          id="current-city"
+          value="Current"
+        />
+      </form>
     </div>
     <div class="container city-card">
-        <div class="border">
-            <div class="temperature-block">
-                <h1 id="city"></h1>
-                <h2 class="temperature" id="temp"></h2>
-                <span class="small units" id="units"><a href="#" id="Celsius">°C</a>|<a href="#" id="Fahrenheit">°F</a></span>
-                <ul class="weather-description">
-                    <li></li>
-                    <li id="description"></li>
-                </ul>   
-            </div>
-                <ul class="other-measurements">
-                    <li>Humidity: <span id="humidity"></span>%</li>
-                    <li>Wind: <span id="wind"></span>km/h</li>
-                </ul>
-            <p class="date" id="date"></p>
-            <div class="container next-days">
-                <div class="row">
-                    <div class="col-sm-2 offset-sm-1 col-xs-12 next-days">
-                        <div class="card-body">
-                            <p class="day">Mon</p>
-                            <i class="fas fa-cloud-sun weather-icon"></i>
-                            <p class="min-max">16° | 6°</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-2 col-xs-12 next-days">
-                        <div class="card-body">
-                            <p class="day">Tue</p>
-                            <i class="fas fa-cloud-sun-rain weather-icon"></i>
-                            <p class="min-max">13° | 4°</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-2 col-xs-12 next-days">
-                        <div class="card-body">
-                            <p class="day">Wed</p>
-                            <i class="fas fa-cloud-showers-heavy weather-icon"></i>
-                            <p class="min-max">10° | 4°</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-2 col-xs-12 next-days">
-                        <div class="card-body">
-                            <p class="day">Thr</p>
-                            <i class="fas fa-cloud weather-icon"></i>
-                            <p class="min-max">6° | -1°</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-2 col-xs-12 next-days">
-                        <div class="card-body border-end-0">
-                            <p class="day">Fri</p>
-                            <i class="far fa-snowflake weather-icon"></i>
-                            <p class="min-max">10° | 6°</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="border">
+        <div class="temperature-block">
+          <h1 id="city"></h1>
+          <h2 class="temperature" id="temp"></h2>
+          <span class="small units" id="units"
+            ><a href="#" id="Celsius">°C</a>|<a href="#" id="Fahrenheit"
+              >°F</a
+            ></span
+          >
+          <ul class="weather-description">
+            <li></li>
+            <li id="description"></li>
+          </ul>
         </div>
+        <ul class="other-measurements">
+          <li>Humidity: <span id="humidity"></span>%</li>
+          <li>Wind: <span id="wind"></span>km/h</li>
+        </ul>
+        <p class="date" id="date"></p>
+        <div class="container next-days">
+          <div class="row">
+            <div class="col-sm-2 offset-sm-1 col-xs-12 next-days">
+              <div class="card-body">
+                <p class="day">Mon</p>
+                <i class="fas fa-cloud-sun weather-icon"></i>
+                <p class="min-max">16° | 6°</p>
+              </div>
+            </div>
+            <div class="col-sm-2 col-xs-12 next-days">
+              <div class="card-body">
+                <p class="day">Tue</p>
+                <i class="fas fa-cloud-sun-rain weather-icon"></i>
+                <p class="min-max">13° | 4°</p>
+              </div>
+            </div>
+            <div class="col-sm-2 col-xs-12 next-days">
+              <div class="card-body">
+                <p class="day">Wed</p>
+                <i class="fas fa-cloud-showers-heavy weather-icon"></i>
+                <p class="min-max">10° | 4°</p>
+              </div>
+            </div>
+            <div class="col-sm-2 col-xs-12 next-days">
+              <div class="card-body">
+                <p class="day">Thr</p>
+                <i class="fas fa-cloud weather-icon"></i>
+                <p class="min-max">6° | -1°</p>
+              </div>
+            </div>
+            <div class="col-sm-2 col-xs-12 next-days">
+              <div class="card-body border-end-0">
+                <p class="day">Fri</p>
+                <i class="far fa-snowflake weather-icon"></i>
+                <p class="min-max">10° | 6°</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="src/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
