Added GithHub repository link
+ Minor refactor to the CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
           <h1 id="city"></h1>
           <h2 class="temperature" id="temp"></h2>
           <span class="small units" id="units"
-            ><a href="#" id="Celsius">°C</a>|<a href="#" id="Fahrenheit"
+            ><a href="#" class="unit-link" id="Celsius">°C</a>|<a
+              href="#"
+              class="unit-link"
+              id="Fahrenheit"
               >°F</a
             ></span
           >
@@ -105,6 +108,15 @@
         </div>
       </div>
     </div>
+    <p>
+      <a
+        href="https://github.com/Sera-iso/Weather_APP"
+        class="footer-link"
+        target="_blank"
+        >Open-source coded</a
+      >
+      by Sera-Iso
+    </p>
     <script src="src/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
