Added timestamp to weather search

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind"></span>km/h</li>
         </ul>
-        <p class="date" id="date"></p>
+        <p class="date">Last updated: <span id="date"></span></p>
         <div class="container next-days">
           <div class="row">
             <div class="col-sm-2 offset-sm-1 col-xs-12 next-days">
