Fetching main weather icon from API

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             ></span
           >
           <ul class="weather-description">
-            <li></li>
+            <li class="icon"><img src="" id="icon"></li>
             <li id="description"></li>
           </ul>
         </div>
