--- a/index.html
+++ b/index.html
@@ -67,43 +67,8 @@
           </ul>
           <p class="date">Last updated: <span id="date"></span></p>
           <div class="container next-days">
-          <div class="row next-days">
-            <div class="col-sm-2 offset-sm-1 col-xs-12 next-days">
-              <div class="card-body">
-                <p class="day">Mon</p>
-                <i class="fas fa-cloud-sun weather-icon"></i>
-                <p class="min-max">16° | 6°</p>
-              </div>
+            <div class="row next-days" id="forecast">
             </div>
-            <div class="col-sm-2 col-xs-12 next-days">
-              <div class="card-body">
-                <p class="day">Tue</p>
-                <i class="fas fa-cloud-sun-rain weather-icon"></i>
-                <p class="min-max">13° | 4°</p>
-              </div>
-            </div>
-            <div class="col-sm-2 col-xs-12 next-days">
-              <div class="card-body">
-                <p class="day">Wed</p>
-                <i class="fas fa-cloud-showers-heavy weather-icon"></i>
-                <p class="min-max">10° | 4°</p>
-              </div>
-            </div>
-            <div class="col-sm-2 col-xs-12 next-days">
-              <div class="card-body">
-                <p class="day">Thr</p>
-                <i class="fas fa-cloud weather-icon"></i>
-                <p class="min-max">6° | -1°</p>
-              </div>
-            </div>
-            <div class="col-sm-2 col-xs-12 next-days">
-              <div class="card-body border-end-0">
-                <p class="day">Fri</p>
-                <i class="far fa-snowflake weather-icon"></i>
-                <p class="min-max">10° | 6°</p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
