--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </div>
     <div class="container city-card" id="city-card">
       <h1 id="city"></h1>
+      <p>this is a weather APP</p>
       <div class="container temperature-block">
       <div class="row">
       <div class="col temperature">
