Updated footer notes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         target="_blank"
         >Open-source coded</a
       >
-      by Sera-Iso
+      by Sera
     </p>
     <script src="src/index.js"></script>
     <script
