--- a/index.html
+++ b/index.html
@@ -86,4 +86,7 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <!--Hi, I am Sera the dev who created this project. 
+      Have feedback on the code? Let me know on GitHub: https://github.com/Sera-iso
+      Want to collaborate? Hit me up on IG: @codewithsera -->
 </html>
