Moved signature above <head>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Hi, I am Sera the dev who created this project. 
+Have feedback on the code? https://github.com/Sera-iso
+Want to collaborate? Hit me up on IG: @codewithsera 
+-->
 <html lang="en">
   <head>
     <script
@@ -85,8 +90,5 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <!--Hi, I am Sera the dev who created this project. 
-          Have feedback on the code? Let me know on GitHub: https://github.com/Sera-iso
-          Want to collaborate? Hit me up on IG: @codewithsera -->
   </body>
 </html>
